<resources>
    <string name="app_name">CriminalIntentApp</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description"> Crime scene photo (not set) </string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <string name="empty_list">This list is empty.</string>
    <string name="save">Save</string>
    <string name="dialog_title">Alert</string>
    <string name="dialog_message">If you exit now, the changes will be lost</string>
    <string name="dialog_negative_button">Discard changes</string>
    <string name="dialog_positive_button">Continue editing</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account?</string>
    <string name="sign_up"><u>Sign up!</u></string>
    <string name="sign_in"><u>Sign in!</u></string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an account?</string>
    <string name="welcome_to_criminalintent">Welcome to CriminalIntent!</string>
    <string name="create_an_account">Create an account</string>
    <string name="empty_fields">Complete the Email and Password fields</string>

    <string name="facebook_app_id">1655134208193463</string>
    <string name="fb_login_protocol_scheme">fb1655134208193463</string>
    <string name="facebook_client_token">5de2cf361345b155e0ee9dbc1849236b</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="loading">Loading...</string>
    <string name="delete">Delete</string>

</resources>