<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise_dark_background"
    tools:context=".presentation.fragments.authentication.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_criminalintent" />

        <com.example.criminalintentapp.utils.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_criminalintent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/turquoise_dark1"/>

        <EditText
            android:id="@+id/et_signIn_email"
            android:layout_width="250dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:textColorHint="@color/turquoise_dark1"
            android:textColor="@color/turquoise"
            android:gravity="center"
            android:drawableStart="@drawable/ic_person_svgrepo_com"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_signIn_password"
            android:layout_width="250dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password"
            android:textColorHint="@color/turquoise_dark1"
            android:textColor="@color/turquoise"
            android:gravity="center"
            android:drawableStart="@drawable/ic_lock_svgrepo_com"
            android:inputType="textPassword"/>

        <com.example.criminalintentapp.utils.FontButton
            android:id="@+id/btn_signIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/turquoise"
            android:textSize="17sp"
            android:background="@drawable/button_background"/>

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_account_sign_up"
            android:textColor="@color/turquoise_dark1"/>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="3dp" />

        <com.example.criminalintentapp.utils.GoogleButton
            android:id="@+id/btn_Google"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/continue_with_google"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_google_svgrepo_com"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>